<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B3E7FD"
        tools:context=".ui.start.MainActivity">

    <!-- "Smart Connect" logo -->
    <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Smart Connect"
            android:textSize="33sp"
            android:fontFamily="@font/poppins_extrabold"
            android:textColor="#000000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            android:layout_marginBottom="0dp" />

    <!-- CardView container med runde hjørner, samler alle funksjoner på et sted -->
    <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp"
            android:backgroundTint="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

            <!-- "Registrer ny bruker" statusmelding -->
            <TextView
                    android:id="@+id/statusMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_msg1"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp" />

            <!-- Brukernavn Input felt -->
            <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_stroke"
                    android:hint="@string/register_credentials1"
                    android:singleLine="true"
                    android:backgroundTint="#000000"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginBottom="16dp" />

            <!-- Passord Input felt -->
            <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_stroke"
                    android:hint="@string/register_credentials2"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:backgroundTint="#000000"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginBottom="16dp" />

            <!-- Fødselsdato Input felt ved bruk av DatePickerDialog -->
            <EditText
                    android:id="@+id/birthdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_stroke"
                    android:hint="@string/register_credentials3"
                    android:singleLine="true"
                    android:inputType="none"
                    android:clickable="true"
                    android:focusable="false"
                    android:backgroundTint="#000000"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginBottom="16dp" />

            <!-- Rettigheter Input felt -->
            <EditText
                    android:id="@+id/rettigheter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_stroke"
                    android:hint="@string/register_credentials4"
                    android:singleLine="true"
                    android:inputType="text|numberDecimal"
                    android:backgroundTint="#000000"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginBottom="16dp" />

            <!-- E-mail Input felt -->
            <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_stroke"
                    android:hint="@string/register_credentials5"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="#000000"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginBottom="16dp" />

            <!-- Adresse Input felt -->
            <EditText
                    android:id="@+id/adresse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_stroke"
                    android:hint="@string/register_credentials6"
                    android:singleLine="true"
                    android:inputType="textPostalAddress"
                    android:backgroundTint="#000000"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginBottom="16dp" />

            <!-- Telefon Input felt -->
            <EditText
                    android:id="@+id/telefon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_stroke"
                    android:hint="@string/register_credentials7"
                    android:singleLine="true"
                    android:inputType="text|number"
                    android:backgroundTint="#000000"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginBottom="16dp" />

            <!-- Registrer knapp -->
            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/registerButton"
                    android:layout_width="150dp"
                    android:layout_height="48dp"
                    android:text="@string/register_credentials8"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="#000000"
                    android:background="@drawable/button_stroke"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"/>

            <!-- Har du allerede en bruker knapp, som fører brukeren tilbake til logg inn siden -->
            <TextView
                    android:id="@+id/alreadyHaveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/register_msg2"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:clickable="true"
                    android:focusable="true"
            />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Merkevare stempel på bunn -->
    <TextView
            android:id="@+id/footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Smart Connect AS"
            android:textSize="14sp"
            android:textColor="#000000"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
