<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!-- Øverste del med hvit bakgrunn -->
    <View
            android:id="@+id/topBackground"
            android:layout_width="0dp"
            android:layout_height="220dp"
            android:background="@drawable/top_background_with_stroke"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    <!-- "Innstillinger" overskrift -->
    <TextView
            android:id="@+id/headerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_1"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="#000000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp" app:layout_constraintHorizontal_bias="0.065"/>

    <!-- Logg ut knapp -->
    <ImageView
            android:id="@+id/logoutButton"
            android:layout_width="41dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginStart="368dp"/>

    <!-- Knapper for mer spesifike innstillinger -->
    <LinearLayout
            android:layout_width="409dp"
            android:layout_height="151dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/headerTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:gravity="center">

        <!-- Knapp for å endre profilbilde -->
        <ImageView
                android:id="@+id/endreProfilbilde"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:src="@drawable/ic_profilbilde"
                android:layout_margin="2dp"
                android:contentDescription="@string/home_category1"/>

        <!-- Knapp for å endre brukernavn og passord -->
        <ImageView
                android:id="@+id/endrePassord"
                android:layout_width="130dp"
                android:layout_height="128dp"
                android:src="@drawable/ic_login"
                android:layout_margin="2dp"
                android:clickable="true"
                android:focusable="true" />

        <!-- Knapp for tilgangskontrollsiden -->
        <ImageView
                android:id="@+id/tilgangskontrollImageView"
                android:layout_width="124dp"
                android:layout_height="125dp"
                android:src="@drawable/ic_tilgang"
                android:layout_margin="2dp"
                android:contentDescription="@string/settings_4"
                android:clickable="true"
                android:focusable="true" />
    </LinearLayout>

    <!-- Avanserte innstillinger -->
    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/accessTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="0dp"
            android:padding="8dp">


        <!-- Automatisering innstillinger -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="3dp">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_10"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_weight="1"
                    android:textColor="#000000" />

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/administrer_button"
                    android:backgroundTint="#B3E7FD"
                    android:textColor="#000000" />
        </LinearLayout>

        <!-- Varsler innstillinger -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="3dp">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_11"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_weight="1"
                    android:textColor="#000000"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Alt"
                    android:backgroundTint="#B3E7FD"
                    android:textColor="#000000" />
        </LinearLayout>

        <!-- Utseende innstillinger -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="3dp">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_12"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_weight="1"
                    android:textColor="#000000" />

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lyst"
                    android:backgroundTint="#B3E7FD"
                    android:textColor="#000000" />
        </LinearLayout>

        <!-- Språk innstillinger -->
        <LinearLayout
                android:id="@+id/safeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="3dp">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_13"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_weight="1"
                    android:textColor="#000000" />

            <Button
                    android:id="@+id/changeLanguageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#B3E7FD"
                    android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>

    <!-- Separator mellom avanserte innstillinger og administrer enheter knappen -->
    <View
            android:id="@+id/sectionSeparator2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#242424"
            app:layout_constraintTop_toBottomOf="@id/lightingTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="550dp" />

    <!-- Administrer enheter knapp -->
    <Button
            android:id="@+id/manageDevicesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_button"
            android:backgroundTint="#B3E7FD"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginBottom="4dp"/>

    <!-- "Sikkerhet" underoverskrift -->
    <TextView
            android:id="@+id/lightingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_16"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@id/topBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"/>

    <!-- Separator mellom Sikkerhet og Avanserte innstillinger -->
    <View
            android:id="@+id/sectionSeparator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#242424"
            app:layout_constraintTop_toBottomOf="@id/lightingTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="180dp" />

    <!-- "Avansert" underoverskrift -->
    <TextView
            android:id="@+id/accessTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Avansert"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@id/sectionSeparator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            />

    <!-- Av/på knapper for sikkerhet innstillinger -->
    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/lightingTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="0dp"
            android:padding="8dp">

        <!-- Blokker tilgang -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="3dp">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_6"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_weight="1"
                    android:textColor="#000000"/>

            <Switch
                    android:id="@+id/bedroomSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:layout_margin="8dp"
                    android:scaleX="1.5"
                    android:scaleY="1.5"/>
        </LinearLayout>

        <!-- Lås alle dører -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="3dp">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_7"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_weight="1"
                    android:textColor="#000000"/>

            <Switch
                    android:id="@+id/bathroomSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:scaleX="1.5"
                    android:scaleY="1.5"/>
        </LinearLayout>

        <!-- Skru av alt -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="3dp">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_8"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_weight="1"
                    android:textColor="#000000"/>

            <Switch
                    android:id="@+id/entranceSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:scaleX="1.5"
                    android:scaleY="1.5"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
